--- a/README
+++ b/README
@@ -1,21 +1,20 @@
-XKB-SWITCH 
+**XKB-SWITCH** 
 by J. Bromley, S. Mironov
 
-* Description
+Description
+===========
 
 xkb-switch is a C++ program that allows to query and change the XKB layout state.
 Originally ruby-based code written by J.Broomley.
 
-XKeyboard.h    interface for a class that queries and sets XKB state (layouts)
-XKeyboard.cpp  implementation for XKB query/set class
-X11Exception.h C++ exception class
+XKeyboard.cpp  Implementation for XKB query/set class
 XKbSwitch.cpp  Main program
-README         this file
 
 The C++ class has no special dependencies on anything outside of
 X-related libraries, so it can be easily used with other software.
 
-* Building
+Building
+========
 
 To build the program manually, do the following.
 
@@ -24,8 +23,24 @@ To build the program manually, do the following.
  3. make
  4. sudo make install
 
+Usage
+=====
+	
+	$ xkb-switch --help
 
-* Bugs or Problems
+	Usage: xkb-switch -s ARG            Sets current layout group to ARG
+	       xkb-switch -l|--list         Displays all layout groups
+	       xkb-switch -h|--help         Displays this message
+	       xkb-switch -v|--version      Shows version number
+	       xkb-switch -w|--wait [-p]    Waits for group change and exits
+	       xkb-switch -W                Infinitely waits for group change
+	       xkb-switch -n|--next         Switch to the next layout group
+	       xkb-switch [-p]              Displays current layout group
+
+
+
+Bugs or Problems
+================
 
 If you find any bugs please let me know at
 ierton@gmail.com. Admittedly, I only tested with a few
