Add "-f" option: print fancy name of current layout group

--- a/man/xkb-switch.1
+++ b/man/xkb-switch.1
@@ -1,4 +1,4 @@
-.TH "xkb-switch" "1" "1.3.1" "J. Bromley, S. Mironov, Alexei Rad'kov" "User Commands"
+.TH "xkb-switch" "1" "2.1.1" "J. Bromley, S. Mironov, Alexei Rad'kov" "User Commands"
 .SH "xkb-switch"
 .LP 
 .B xkb\-switch
@@ -39,6 +39,9 @@ Switch to the next layout group.
 .BR \-p
 Display current layout group.
 .TP 
+.TP 
+.BR \-f ", " \-\^\-fancy
+Display fancy name of current layout group.
 .SH "AUTHORS"
 .LP 
 J. Bromley, S. Mironov, Alexei Rad'kov
